--- a/client/assets/style/style.css
+++ b/client/assets/style/style.css
@@ -7,6 +7,11 @@
     height: 50px;
     width: 50px;
 } */
+main{
+    font-family: 'ZCOOL KuaiLe', cursive;
+}
+
+    
 
 .bomb{
        position: fixed;
